Fix vertical spacing on homepage.

--- a/app/_scss/_homepage.scss
+++ b/app/_scss/_homepage.scss
@@ -15,7 +15,7 @@
       color: white;
 
       h2 {
-        margin: 30px 0 10px;
+        margin: 50px 0 10px;
         font-weight: bold;
         font-size: 1.9em;
         line-height: 1.3em;
@@ -75,7 +75,7 @@
 
   #homepage .header-homepage #slogan {
     margin-left: 15px;
-    height: 414px;
+    height: 390px;
 
     h2 {
       max-width: 474px;
